--- a/style.css
+++ b/style.css
@@ -18,6 +18,30 @@ body {
   margin: 100px auto;
   text-align: center;
   color: #fff;
-  background: rgba(0, 151, 148, 0.177);
+  background: rgba(0, 151, 148, 0.101);
   border-radius: 4px;
+}
+
+#city,
+#btn {
+  display: block;
+  margin: 10px auto;
+  padding: 0.5rem 0.7rem;
+  border-radius: 4px;
+  border: none;
+  width: 20%;
+  text-align: center;
+  font-size: 1rem;
+}
+#btn {
+  cursor: pointer;
+  background-color: #018129;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+#btn:hover {
+  transition: all 0.4s;
+  background-color: #e23b25;
+  opacity: 0.8;
 }
