--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
   border-radius: 4px;
 }
 
+.container h1 {
+  font-size: 3rem;
+}
+
 #city,
 #btn {
   display: block;
@@ -47,4 +51,11 @@ body {
 }
 
 .weather-container {
+}
+
+.weather-container h2 {
+  text-decoration: underline;
+  margin: 2rem 4rem;
+  text-align: left;
+  font-size: 2rem;
 }
