--- a/style.css
+++ b/style.css
@@ -46,10 +46,20 @@ body {
   opacity: 0.8;
 }
 
+.weather-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .weather-container h2 {
   margin: 2rem 4rem;
-
   font-size: 2rem;
   color: rgb(229, 227, 229);
   text-shadow: 2px 3px black;
+}
+
+p {
+  font-size: 1.5rem;
 }
