--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: url('/img/bg.jpg') no-repeat center center/cover;
+  background: url('img/bg.jpg') no-repeat center center/cover;
   width: 100vw;
   height: 100vh;
   font-family: 'Dosis', sans-serif;
